--- a/Jijesh.HTML
+++ b/Jijesh.HTML
@@ -20,11 +20,12 @@ Hello my name is Jijesh CK.I am an electrical engineer.I enjoy playing with my d
 </ul>
 
 <h3>
-<a href="index.HTML">
+<a href="index.html">
 Home
 </a>
 </h3>
 
 </body>
 </html>
+
 
