--- a/Arpitha.HTML
+++ b/Arpitha.HTML
@@ -28,9 +28,10 @@ Hello my name is Arpitha Nair and I am 10 years old.I am in 5th grade.I enjoy ma
 
 
 <h3>
-<a href="Family.HTML">
+<a href="index.html">
 Home
 </a>
 </h3>
 </body>
+
 </html>
